fix: Fixed bug with cards other than the protagonist one not showing up flipped card details on click

--- a/client/src/components/DeckCreationModal.module.scss
+++ b/client/src/components/DeckCreationModal.module.scss
@@ -228,6 +228,7 @@
   font-weight: 700;
   font-size: 0.85rem;
   text-align: center;
+  pointer-events: none;
 }
 
 .empty {
